test: modify tests because of new loopdependencies